objects/PMC_DH_CommerceEntitlementSalesArea__c.object
<CustomObject>
    <description>This Object is used by Mosaic Direct to associate customer specific entitlement products to their corresponding sales area.</description>
    <fields>
        <fullName>PMC_DH_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>AccountEntitlementProdSalesAreas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>AccountEntitlementProdSalesAreas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_DH_SalesArea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Area</label>
        <referenceTo>PMC_SS_SalesArea__c</referenceTo>
        <relationshipName>AccountEntitlementProdSalesAreas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_DH_SoldTo_SKU_SaleAreaId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SoldTo SKU SalesArea Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_UniqueCombinedKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Combination of Account Number, Sales Area Division and Product SKU</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Unique Combined Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Commerce Entitlement Sales Area</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PMC_DH_SalesArea__c</columns>
        <columns>PMC_DH_Product__c</columns>
        <columns>PMC_DH_Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CES-{0000000000}</displayFormat>
        <label>CommerceEntSalesArea</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commerce Entitlement Sales Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>